# password-manager

./: .gitignore  CMakeLists.txt  EncryptionUtils.cpp  PasswordData.h  PasswordManager.h  README.md  addpassworddialog.cpp  addpassworddialog.h  addpassworddialog.ui  app_icon.rc  databasemanager.cpp  databasemanager.h  db_query.sql  deletepassworddialog.cpp  deletepassworddialog.h  deletepassworddialog.ui  encryptionutils.h  exportpassworddialog.cpp  exportpassworddialog.h  exportpassworddialog.ui  exportservice.cpp  exportservice.h  fileservice.cpp  fileservice.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordMode.h  password_manager_pl_PL.ts  passwordformdialog.cpp  passwordformdialog.h  passwordformdialog.ui  passwordmanager.cpp  resources.qrc  selectpassworddialog.cpp  selectpassworddialog.h
database/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  db_config.json  db_query.sql
dialogs/: CMakeLists.txt  exportpassworddialog.cpp  exportpassworddialog.h  logindialog.h  logindialog.ui  passwordformdialog.cpp  passwordformdialog.h  selectdialog.cpp  selectdialog.h  selectdialog.ui  selectpassworddialog.cpp  selectpassworddialog.h  selectpassworddialog.ui
encryption/: CMakeLists.txt  cryptodata.h  encryptionutils.cpp  encryptionutils.h
models/: CMakeLists.txt  group.cpp  group.h  passwordmanager.cpp  passwordmanager.h  passwordmode.h
services/: CMakeLists.txt  fileservice.cpp  fileservice.h  test_file.csv  test_file.json  test_file.xml
ui/: CMakeLists.txt
